--- a/static/assets/css/main.css
+++ b/static/assets/css/main.css
@@ -146,9 +146,15 @@ button.success {
     left: 14px;
 }
 
-button[name="login"] {
+button[name="login"], .add-button {
     text-transform: none;
 }
+
+/* .btn.btn-primary.add-button {
+    background-color: #0d6efd;
+    border-color: #0d6efd;
+    color: #0d6efd;
+} */
 
 .form-field {
     background-color: rgba(156, 39, 176, 0);
@@ -210,6 +216,11 @@ input[type="file"] {
     justify-content: center;
     flex-wrap: wrap;
     border-radius: 0 0 4px 4px;
+}
+
+input[type="file"] + .detected-as-invalid {
+    top: 120px;
+    border-radius: 0;
 }
 
 .submitting-button {
