--- a/templates/home/form.html
+++ b/templates/home/form.html
@@ -844,12 +844,12 @@
         {% if patient %}
 
         <!-- Button trigger modal -->
-        <button type="button" class="btn btn-outline-danger delete-button pull-left" data-toggle="modal" data-target="#exampleModalCenter">
+        <button type="button" class="btn btn-outline-danger delete-button pull-left" data-toggle="modal" data-target="#delete-patient-modal">
           Eliminar
         </button>
 
         <!-- Modal -->
-        <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+        <div class="modal fade" id="delete-patient-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
           <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
               <div class="modal-header">
