Add search functionality in test options

--- a/templates/home/form.html
+++ b/templates/home/form.html
@@ -702,11 +702,32 @@
                           </div>
                         </div>
 
-                        <div class="row diagnosis-search-box">
+                        {% comment %} <div class="row diagnosis-search-box">
                           <div class="col-md-12">
                             <div class="select-search-wrapper">
                               <div id="test-search-container" class="search-container">
                                 <div class="option-container test-option-container">
+                                  <ul>
+                                  </ul>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div> {% endcomment %}
+
+                        <div class="row diagnosis-search-box">
+                          <div class="col-md-12">
+                            <div class="select-search-wrapper">
+                              <div id="test-search-container" class="search-container">
+                                <div class="search-input-header">
+                                  <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" width="24" height="24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                                    <circle cx="11" cy="11" r="8"/>
+                                    <line x1="21" y1="21" x2="16.65" y2="16.65"/>
+                                  </svg>
+                                  <input id="test-search-input" class="search-input" type="search" placeholder="Buscar...">
+                                </div>
+                                
+                                <div class="option-container">
                                   <ul>
                                   </ul>
                                 </div>
